--- a/TourPlanner/src/main/resources/leaflet.html
+++ b/TourPlanner/src/main/resources/leaflet.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaflet Map with Directions</title>
     <script>
-        var directions = {{MY_DIRECTIONS}};
+        const directions = {MY_DIRECTIONS};
     </script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
